--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <style>
         body {
             background-color: aquamarine;
+            color: black;
+            text-align: center;
         }
     </style>
 </head>
