--- a/index.html
+++ b/index.html
@@ -2,16 +2,10 @@
 <html lang="en">
 <head>
     <title>First Repo</title>
-    <style>
-        body {
-            background-color: aquamarine;
-            color: black;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Webpage</h1>\
+    <h1>Webpage</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque ducimus quia quaerat, dolores earum omnis officiis rem, repellendus modi reiciendis accusantium provident ad? Ipsam aliquam harum consequuntur laboriosam optio asperiores.</p>
 </body>
 </html>
