--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Webpage</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque ducimus quia quaerat, dolores earum omnis officiis rem, repellendus modi reiciendis accusantium provident ad? Ipsam aliquam harum consequuntur laboriosam optio asperiores.</p>
-    <ul>
+    <ul style="color: chartreuse;">
         <li>ITEM 1</li>
         <li>ITEM 2</li>
         <li>ITEM 3</li>
