Added style tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="en">
 <head>
     <title>First Repo</title>
-    <link rel="stylesheet" href="index.css">
+    <style>
+        body {
+    background-color: aquamarine;
+    color: black;
+    text-align: center;
+    padding: 50px;
+    margin: 30px;
+    font-size: 70px;
+}
+    </style>
 </head>
 <body>
     <h1>Webpage</h1>
